@@ -1,5 +1,9 @@
 Tue Sep  7 17:25:12 1999  Jeffrey A Law  (law@cygnus.com)
 
+	* elf-hppa.h (elf_hppa_final_link_relocate): Handle DLTREL14WR and
+	DLTREL14WD relocs.  
+	(elf_hppa_relocate_insn): Similarly.
+
 	* elf-hppa.h (elf_hppa_final_link_relocate): Handle DLTREL14R and
 	DLTREL21L relocs.  Pass the output bfd to elf_hppa_relocate_insn.
 	Pass the relocate type rather than the insn format to
